--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,11 @@ Authors@R: c(
     )
 Description: Adjusted inference for weighted parametric group sequential.
 License: GPL (>= 3)
+URL: https://merck.github.io/wpgsd/, https://github.com/Merck/wpgsd
+BugReports: https://github.com/Merck/wpgsd/issues
 Encoding: UTF-8
-LazyData: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+Depends:
+    R (>= 3.6)
 Imports:
     dplyr,
     gMCPLite,
@@ -24,9 +25,8 @@ Imports:
     mvtnorm,
     stats,
     tibble
-Suggests: 
+Suggests:
     covr,
-    devtools,
     haven,
     kableExtra,
     knitr,
@@ -34,7 +34,8 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     tidyr
-Depends: 
-    R (>= 3.6)
+VignetteBuilder:
+    knitr
 Config/testthat/edition: 3
-URL: https://merck.github.io/wpgsd/
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
