Import from stats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,7 @@ importFrom(dplyr,num_range)
 importFrom(dplyr,select)
 importFrom(gMCPLite,gMCP)
 importFrom(gMCPLite,getWeights)
+importFrom(stats,pnorm)
+importFrom(stats,qnorm)
+importFrom(stats,uniroot)
 importFrom(tibble,tibble)
