Fix check note by importing `all_of()` from tidyselect

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,3 +33,4 @@ importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,uniroot)
 importFrom(tibble,tibble)
+importFrom(tidyselect,all_of)
