--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     mvtnorm,
     rlang (>= 0.4.11),
     stats,
-    tibble
+    tibble,
+    tidyselect
 Suggests:
     covr,
     haven,
