--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(
     person("Larry", "Leon", email = "larry.leon2@merck.com", role = "aut"),
     person("Merck Sharp & Dohme Corp", role = c("cph"))
     )
-Description: Adjusted inference for weighted parametric group sequential.
+Description: Adjusted inference for weighted parametric group sequential design.
 License: GPL (>= 3)
 URL: https://merck.github.io/wpgsd/, https://github.com/Merck/wpgsd
 BugReports: https://github.com/Merck/wpgsd/issues
