--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,6 @@ export(find_xi)
 export(generate_bounds)
 export(generate_corr)
 export(generate_event_table)
-import(gsDesign)
-import(mvtnorm)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
@@ -23,6 +21,8 @@ importFrom(dplyr,num_range)
 importFrom(dplyr,select)
 importFrom(gMCPLite,gMCP)
 importFrom(gMCPLite,getWeights)
+importFrom(mvtnorm,GenzBretz)
+importFrom(mvtnorm,pmvnorm)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
