add a new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(":=")
 export(.data)
 export(as_label)
 export(as_name)
+export(calc_seq_p)
 export(closed_test)
 export(enquo)
 export(enquos)
@@ -32,5 +33,6 @@ importFrom(rlang,enquos)
 importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,uniroot)
+importFrom(stringr,str_split)
 importFrom(tibble,tibble)
 importFrom(tidyselect,all_of)
